实现my-less-loader

--- a/webpack-demo/src/index.html
+++ b/webpack-demo/src/index.html
@@ -6,8 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="wrap">
-    <div class="name">name</div>
+  <div class="body">
+    <div class="title">学习webpack-loader</div>
   </div>
   <script src="../dist/bundle.js"></script>
 </body>
